--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <main class="container">
+        <header class="Slider__header">
+            <h2 class="Slider__title">Polecane dla Ciebie</h2>
+            <button class="Slider__button">Zobacz wszystkie</button>
+        </header>
         <section class="Slider">
             <div class="swiper-wrapper Slider__wrapper">
 
@@ -205,7 +209,7 @@
                 </svg>
             </div>
         </section>
-        <script type="module" src="script.js"></script>
     </main>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
