--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Dynamic Slider by Łukasz Tukindorf</title>
     <link rel="stylesheet" href="src/styles/style.css">
     <link rel="stylesheet" href="src/styles/product-card.css">
     <link rel="stylesheet" href="src/styles/slider.css">
@@ -22,7 +22,7 @@
                 <article class="swiper-slide SliderProduct">
                     <span class="SliderProduct__discount">-20% zniżki</span>
                     <div class="SliderProduct__details">
-                        <img src="src/assets/olejek.jpg" alt="Product Image" class="SliderProduct__image">
+                        <img src="src/assets/olejek.jpg" alt="Product Image" class="SliderProduct__image" loading="lazy">
                         <div class="SliderProduct__rating">
                             <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="SliderProduct__star SliderProduct__star--active">
                                 <path d="M8 0L10.3982 4.69921L15.6085 5.52786L11.8803 9.26079L12.7023 14.4721L8 12.08L3.29772 14.4721L4.11969 9.26079L0.391548 5.52786L5.60184 4.69921L8 0Z" fill="#D9D9D9"/>
@@ -52,7 +52,7 @@
                 <article class="swiper-slide SliderProduct">
                     <span class="SliderProduct__discount">-20% zniżki</span>
                     <div class="SliderProduct__details">
-                        <img src="src/assets/olejek.jpg" alt="Product Image" class="SliderProduct__image">
+                        <img src="src/assets/olejek.jpg" alt="Product Image" class="SliderProduct__image" loading="lazy">
                         <div class="SliderProduct__rating">
                             <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="SliderProduct__star SliderProduct__star--active">
                                 <path d="M8 0L10.3982 4.69921L15.6085 5.52786L11.8803 9.26079L12.7023 14.4721L8 12.08L3.29772 14.4721L4.11969 9.26079L0.391548 5.52786L5.60184 4.69921L8 0Z" fill="#D9D9D9"/>
@@ -82,7 +82,7 @@
                 <article class="swiper-slide SliderProduct">
                     <span class="SliderProduct__discount">-20% zniżki</span>
                     <div class="SliderProduct__details">
-                        <img src="src/assets/olejek.jpg" alt="Product Image" class="SliderProduct__image">
+                        <img src="src/assets/olejek.jpg" alt="Product Image" class="SliderProduct__image" loading="lazy">
                         <div class="SliderProduct__rating">
                             <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="SliderProduct__star SliderProduct__star--active">
                                 <path d="M8 0L10.3982 4.69921L15.6085 5.52786L11.8803 9.26079L12.7023 14.4721L8 12.08L3.29772 14.4721L4.11969 9.26079L0.391548 5.52786L5.60184 4.69921L8 0Z" fill="#D9D9D9"/>
@@ -112,7 +112,7 @@
                 <article class="swiper-slide SliderProduct">
                     <span class="SliderProduct__discount">-20% zniżki</span>
                     <div class="SliderProduct__details">
-                        <img src="src/assets/olejek.jpg" alt="Product Image" class="SliderProduct__image">
+                        <img src="src/assets/olejek.jpg" alt="Product Image" class="SliderProduct__image" loading="lazy">
                         <div class="SliderProduct__rating">
                             <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="SliderProduct__star SliderProduct__star--active">
                                 <path d="M8 0L10.3982 4.69921L15.6085 5.52786L11.8803 9.26079L12.7023 14.4721L8 12.08L3.29772 14.4721L4.11969 9.26079L0.391548 5.52786L5.60184 4.69921L8 0Z" fill="#D9D9D9"/>
@@ -142,7 +142,7 @@
                 <article class="swiper-slide SliderProduct">
                     <span class="SliderProduct__discount">-20% zniżki</span>
                     <div class="SliderProduct__details">
-                        <img src="src/assets/olejek.jpg" alt="Product Image" class="SliderProduct__image">
+                        <img src="src/assets/olejek.jpg" alt="Product Image" class="SliderProduct__image" loading="lazy">
                         <div class="SliderProduct__rating">
                             <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="SliderProduct__star SliderProduct__star--active">
                                 <path d="M8 0L10.3982 4.69921L15.6085 5.52786L11.8803 9.26079L12.7023 14.4721L8 12.08L3.29772 14.4721L4.11969 9.26079L0.391548 5.52786L5.60184 4.69921L8 0Z" fill="#D9D9D9"/>
@@ -172,7 +172,7 @@
                 <article class="swiper-slide SliderProduct">
                     <span class="SliderProduct__discount">-20% zniżki</span>
                     <div class="SliderProduct__details">
-                        <img src="src/assets/olejek.jpg" alt="Product Image" class="SliderProduct__image">
+                        <img src="src/assets/olejek.jpg" alt="Product Image" class="SliderProduct__image" loading="lazy">
                         <div class="SliderProduct__rating">
                             <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="SliderProduct__star SliderProduct__star--active">
                                 <path d="M8 0L10.3982 4.69921L15.6085 5.52786L11.8803 9.26079L12.7023 14.4721L8 12.08L3.29772 14.4721L4.11969 9.26079L0.391548 5.52786L5.60184 4.69921L8 0Z" fill="#D9D9D9"/>
